[package]
name = "stacks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
indicatif = "0.17.3"
lazy_static = "1.4.0"
regex = "1.7.1"
